--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,79 @@
 altgraph==0.17.4
 bidict==0.23.1
+branca==0.8.0
+CacheControl==0.14.1
+cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
+click==8.1.7
+contourpy==1.3.0
+cryptography==43.0.3
+customtkinter==5.0.5
+cycler==0.12.1
+darkdetect==0.8.0
+decorator==5.1.1
+firebase==4.0.1
+firebase-admin==6.6.0
+fonttools==4.55.0
+future==0.18.3
+geocoder==1.38.1
+geopandas==1.0.1
+google-api-core==2.23.0
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+grpcio==1.68.0
+grpcio-status==1.68.0
 h11==0.14.0
+httplib2==0.22.0
 idna==3.10
 importlib_metadata==8.5.0
+importlib_resources==6.4.5
+Jinja2==3.1.4
+kiwisolver==1.4.7
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+msgpack==1.1.0
 netifaces==0.10.6
+networkx==3.2.1
+numpy==2.0.2
+osmnx==2.0.0
 packaging==24.2
+pandas==2.2.3
+Pillow==9.3.0
+proto-plus==1.25.0
+protobuf==5.28.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 pyinstaller==6.11.1
 pyinstaller-hooks-contrib==2024.10
+PyJWT==2.10.0
+pyogrio==0.10.0
+pyparsing==3.2.0
+pyperclip==1.8.2
+pyproj==3.6.1
+python-dateutil==2.9.0.post0
 python-engineio==4.10.1
 python-socketio==5.11.4
+pytz==2024.2
+ratelim==0.1.6
 requests==2.32.3
+rsa==4.9
+shapely==2.0.6
 simple-websocket==1.1.0
+six==1.16.0
+tzdata==2024.2
+uritemplate==4.1.1
 urllib3==2.2.3
+websocket-client==1.8.0
 wsproto==1.2.0
+xyzservices==2024.9.0
 zipp==3.21.0
