--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,13 @@ darkdetect==0.8.0
 decorator==5.1.1
 firebase==4.0.1
 firebase-admin==6.6.0
+folium==0.18.0
 fonttools==4.55.0
 future==0.18.3
 geocoder==1.38.1
+geographiclib==2.0
 geopandas==1.0.1
+geopy==2.4.1
 google-api-core==2.23.0
 google-api-python-client==2.154.0
 google-auth==2.36.0
@@ -70,6 +73,7 @@ rsa==4.9
 shapely==2.0.6
 simple-websocket==1.1.0
 six==1.16.0
+tkinterweb==3.24.7
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
