--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ msgpack==1.1.0
 netifaces==0.10.6
 networkx==3.2.1
 numpy==2.0.2
+opencv-python==4.10.0.84
 osmnx==2.0.0
 packaging==24.2
 pandas==2.2.3
